fix(ui5-multi-combobox): fix jumping parent div (#2136)

--- a/packages/main/src/themes/Tokenizer.css
+++ b/packages/main/src/themes/Tokenizer.css
@@ -38,7 +38,6 @@
 }
 
 .ui5-tokenizer--content {
-	height: 100%;
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
